Add github action for unit-tests
* move out of `simulation_test`, since its requirements are more lightweight
* remove .coveragerc since the config can be stored in pyproject.yaml
* turn on reporting on what lines are missing

--- a/tox.ini
+++ b/tox.ini
@@ -10,15 +10,20 @@ deps =
 
 
 [testenv:unit]
+changedir = tests
+deps = 
+    {[testenv]deps}
+    pytest-cov
 commands =
-    pytest tests/unit
+    pytest --cov-report=term-missing unit
+    coverage xml
 
 
 [testenv:integration]
 deps =
+    {[testenv]deps}
     NEURON
     morphio
-    -r tests/requirements.txt
 passenv = NEURODAMUS_NEOCORTEX_ROOT
 setenv =
     # build_ndcore.sh will install into _lib
