--- a/tox.ini
+++ b/tox.ini
@@ -8,14 +8,12 @@ envlist = flake8, unit
 deps =
     -r tests/requirements.txt
 
-
 [testenv:unit]
 deps = 
     {[testenv]deps}
     pytest-cov
 commands =
     pytest --cov=neurodamus --cov-report=term-missing tests/unit
-
 
 [testenv:integration]
 deps =
@@ -35,7 +33,6 @@ commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data
     pytest -x --forked tests/integration
 
-
 [testenv:bbp-model]
 # Please module load neurodamus-neocortex py-neurodamus beforehand
 passenv = *
@@ -54,6 +51,19 @@ deps = flake8-pyproject
 skip_install = True
 commands = flake8
 
+[testenv:lint]
+skip_install = True
+deps =
+    ruff
+commands =
+	ruff format --check neurodamus
+
+[testenv:format]
+skip_install = True
+deps =
+    ruff
+commands =
+	ruff format neurodamus
 
 [testenv:docs]
 changedir = {toxinidir}
