--- a/tox.ini
+++ b/tox.ini
@@ -10,13 +10,11 @@ deps =
 
 
 [testenv:unit]
-changedir = tests
 deps = 
     {[testenv]deps}
     pytest-cov
 commands =
-    pytest --cov-report=term-missing unit
-    coverage xml
+    pytest --cov=neurodamus --cov-report=term-missing tests/unit
 
 
 [testenv:integration]
