let ruff fix the lint errors it can

--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,7 @@ deps =
     ruff
 commands =
 	ruff format --check neurodamus
+	ruff check neurodamus
 
 [testenv:format]
 skip_install = True
@@ -64,6 +65,7 @@ deps =
     ruff
 commands =
 	ruff format neurodamus
+    ruff check --fix neurodamus
 
 [testenv:docs]
 changedir = {toxinidir}
