--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,6 +109,7 @@ ignore = [
     "D415",    # First line should end with a period, question mark, or exclamation point
     ### TODO: remove rules temporarily ignored
     "ANN",     # Missing type annotation
+    "D301",    # Use `r"""` if any backslashes in a docstring
     "DOC201",  # `return` is not documented in docstring
     "DOC402",  # `yield` is not documented in docstring
     "DOC501",  # Raised exception missing from docstring
