--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,6 +113,7 @@ ignore = [
     "DOC201",  # `return` is not documented in docstring
     "DOC402",  # `yield` is not documented in docstring
     "DOC501",  # Raised exception missing from docstring
+    "LOG015",  # `info()` call on root logger
 ]
 
 [tool.ruff.lint.isort]
