--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,10 +108,12 @@ ignore = [
     "TD",      # TODOs
     "D415",    # First line should end with a period, question mark, or exclamation point
     ### TODO: these are low priority to fix, but perhaps should be considered in the future
+    "ANN",     # Missing type annotation
     "FBT002",  # Boolean default positional argument in function definition
+    "PTH",     # use of os.path, will move to pathlib at some point
     "S101",    # Use of `assert` detected
     ### TODO: remove rules temporarily ignored
-    "ANN",     # Missing type annotation
+    "D205",    # missing-blank-line-after-summary
     "D301",    # Use `r"""` if any backslashes in a docstring
     "DOC201",  # `return` is not documented in docstring
     "DOC402",  # `yield` is not documented in docstring
