--- a/tox.ini
+++ b/tox.ini
@@ -10,15 +10,18 @@ deps =
 
 
 [testenv:unit]
+deps = 
+    {[testenv]deps}
+    pytest-cov
 commands =
-    pytest tests/unit
+    pytest --cov=neurodamus --cov-report=term-missing tests/unit
 
 
 [testenv:integration]
 deps =
+    {[testenv]deps}
     NEURON
     morphio
-    -r tests/requirements.txt
 passenv = NEURODAMUS_NEOCORTEX_ROOT
 setenv =
     # build_ndcore.sh will install into _lib
