Adapts integration test

--- a/tox.ini
+++ b/tox.ini
@@ -17,9 +17,10 @@ commands =
 
 [testenv:integration]
 deps =
-    {[testenv]deps}
-    NEURON
+    {[testenv:unit]deps}
+    neuron
     morphio
+    libsonata
 passenv = NEURODAMUS_NEOCORTEX_ROOT
 setenv =
     # build_ndcore.sh will install into _lib
@@ -31,7 +32,7 @@ allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data
-    pytest -x --forked tests/integration
+    pytest --cov=neurodamus --cov-report=term-missing tests/integration
 
 [testenv:bbp-model]
 # Please module load neurodamus-neocortex py-neurodamus beforehand
