--- a/tox.ini
+++ b/tox.ini
@@ -19,9 +19,10 @@ commands =
 
 [testenv:integration]
 deps =
-    {[testenv]deps}
-    NEURON
+    {[testenv:unit]deps}
+    neuron
     morphio
+    libsonata
 passenv = NEURODAMUS_NEOCORTEX_ROOT
 setenv =
     # build_ndcore.sh will install into _lib
@@ -33,7 +34,7 @@ allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data
-    pytest -x --forked tests/integration
+    pytest --cov=neurodamus --cov-report=term-missing tests/integration
 
 
 [testenv:bbp-model]
