--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -1,4 +1,4 @@
-name: Run unit tests
+name: Run integration tests
 
 on:
     pull_request:
@@ -22,11 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools tox coverage
 
-    - name: Run tox unit test
+    - name: Run tox integration test
       run: |
-        tox -eunit
+        tox -e integration
 
-    - name: Coveralls
-      uses: coverallsapp/github-action@v2
-      with:
-        flag-name: unit
