Removes libsonata from integration test deps (is already in package deps)

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools tox coverage
 
-    - name: Run tox integration test
+    - name: Run tox
       run: |
         tox -e integration
 
