--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools tox coverage
 
-    - name: Run tox unit test
+    - name: Run tox
       run: |
         tox -eunit
 
