check integration tests

--- a/tox.ini
+++ b/tox.ini
@@ -24,15 +24,9 @@ deps =
     morphio
 passenv = NEURODAMUS_NEOCORTEX_ROOT
 setenv =
-    # build_ndcore.sh will install into _lib
-    HOC_LIBRARY_PATH={toxinidir}/_lib
-    NRNMECH_LIB_PATH={toxinidir}/_lib/libnrnmech.so
+    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc
     NEURON_INIT_MPI=0
-    PYTHONPATH = {toxinidir}/core/python
-allowlist_externals =
-    {toxinidir}/ci/build_ndcore.sh
 commands =
-    {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data
     pytest --cov=neurodamus --cov-report=term-missing tests/integration
 
 
