--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,14 @@ commands =
     pytest --cov=neurodamus --cov-report=term-missing tests/unit
 
 
+[testenv:baseline]
+deps = 
+    {[testenv]deps}
+    pytest-cov
+commands =
+    pytest --cov=neurodamus --cov-report=term-missing tests/test_import.py
+
+
 [testenv:integration]
 deps =
     {[testenv]deps}
