Add coverage for just importing all the neurodamus modules

--- a/tox.ini
+++ b/tox.ini
@@ -9,18 +9,25 @@ deps =
     -r tests/requirements.txt
 
 [testenv:unit]
-deps = 
+deps =
     {[testenv]deps}
     pytest-cov
 commands =
     pytest --cov=neurodamus --cov-report=term-missing tests/unit
+
+[testenv:baseline]
+deps =
+    {[testenv]deps}
+    pytest-cov
+commands =
+    pytest --cov=neurodamus --cov-report=term-missing tests/test_import.py
 
 [testenv:integration]
 deps =
     {[testenv:unit]deps}
     neuron
     morphio
-passenv = 
+passenv =
     NEURODAMUS_NEOCORTEX_ROOT
 setenv =
     NEURON_INIT_MPI=0
