--- a/.github/workflows/lint_check.yml
+++ b/.github/workflows/lint_check.yml
@@ -13,7 +13,10 @@ jobs:
       uses: actions/setup-python@v5
 
     - name: Install flake8
-      run: pip install flake8-pyproject
+      run: pip install tox
 
     - name: Run flake8
-      run: flake8 neurodamus tests
+      run: tox -eflake8
+
+    - name: Run linting
+      run: tox -elint
