take ARCH value from the system uname

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,12 +1,4 @@
-ARG TARGETARCH
-
-FROM ubuntu:22.04 AS linux_amd64
-ARG ARCH=x86_64
-
-FROM ubuntu:22.04 AS linux_arm64
-ARG ARCH=aarch64
-
-FROM linux_$TARGETARCH
+FROM ubuntu:22.04
 LABEL org.opencontainers.image.authors="Weina Ji <weina.ji@openbraininstitute.org>"
 
 # The default shell for the RUN instruction is ["/bin/sh", "-c"].
@@ -20,8 +12,6 @@ ARG NEURON_COMMIT_ID
 ARG WORKDIR=/opt/software
 ARG INSTALL_DIR=/opt/software/install
 ARG USR_VENV=$WORKDIR/venv
-
-RUN echo "The targeting architecture is $ARCH"
 
 # Install needed libs
 RUN apt-get --yes -qq update \
@@ -78,7 +68,7 @@ RUN source $USR_VENV/bin/activate \
 # Build h5py with the local hdf5
 RUN source $USR_VENV/bin/activate \
  && pip install mpi4py \
- && CC="mpicc" HDF5_MPI="ON" HDF5_INCLUDEDIR=/usr/include/hdf5/mpich HDF5_LIBDIR=/usr/lib/$ARCH-linux-gnu/hdf5/mpich \
+ && ARCH=$(uname -m) CC="mpicc" HDF5_MPI="ON" HDF5_INCLUDEDIR=/usr/include/hdf5/mpich HDF5_LIBDIR=/usr/lib/$ARCH-linux-gnu/hdf5/mpich \
     pip install --no-cache-dir --no-binary=h5py h5py --no-build-isolation
 
 # Install neurodamus and prepare HOC_LIBRARY_PATH
@@ -96,7 +86,8 @@ ENV PYTHONPATH="$INSTALL_DIR/lib/python:$PYTHONPATH"
 
 # Copy and edit module building script and test build
 ADD build_neurodamus.sh $INSTALL_DIR/bin
-RUN sed -i "s/ARCH=\"x86_64\"/ARCH=\"$ARCH\"/g" $INSTALL_DIR/bin/build_neurodamus.sh \
+RUN ARCH=$(uname -m) \
+ && sed -i "s/ARCH=\"x86_64\"/ARCH=\"$ARCH\"/g" $INSTALL_DIR/bin/build_neurodamus.sh \
  && build_neurodamus.sh $NEURODAMUS_MODS_DIR \
  && ./$ARCH/special -python -c "from neuron import h; from neurodamus import Neurodamus; h.quit()" \
  && rm -rf $ARCH/
