--- a/tox.ini
+++ b/tox.ini
@@ -20,16 +20,16 @@ deps =
     {[testenv:unit]deps}
     neuron
     morphio
-passenv = NEURODAMUS_NEOCORTEX_ROOT
+passenv = 
+    NEURODAMUS_NEOCORTEX_ROOT
 setenv =
-    # build_ndcore.sh will install into _lib
-    HOC_LIBRARY_PATH={toxinidir}/_lib
     NEURON_INIT_MPI=0
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
+    sh
 commands =
-    {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data
-    pytest --cov=neurodamus --cov-report=term-missing tests/integration
+    {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
+    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing tests/integration"
 
 [testenv:bbp-model]
 # Please module load neurodamus-neocortex py-neurodamus beforehand
