add suggestions from Weina

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,13 @@ deps =
     {[testenv]deps}
     pytest-cov
 commands =
-    pytest --cov=neurodamus --cov-report=term-missing tests/unit
+    pytest --cov=neurodamus --cov-report=term-missing
+
+[testenv:test]
+deps = 
+    {[testenv]deps}
+commands =
+    pytest {posargs}
 
 [testenv:integration]
 deps =
