--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -20,9 +20,13 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip setuptools tox coverage
+        python -m pip install --upgrade pip tox coverage
 
     - name: Run tox
       run: |
         tox -e integration
 
+    - name: Coveralls
+      uses: coverallsapp/github-action@v2
+      with:
+        flag-name: integration
