--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,4 +1,4 @@
-name: Run unit tests
+name: Build coverage reports
 
 on:
     pull_request:
@@ -30,25 +30,22 @@ jobs:
       with:
         flag-name: baseline
 
-  unit-tests:
-    runs-on: ubuntu-latest
-    steps:
-
-    - uses: actions/checkout@v4
-
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.9'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip tox coverage
-
     - name: Run tox
       run: |
+        rm -rf .coverage
         tox -eunit
 
     - name: Coveralls
       uses: coverallsapp/github-action@v2
       with:
         flag-name: unit
+
+    - name: Run tox
+      run: |
+        rm -rf .coverage
+        tox -e integration
+
+    - name: Coveralls
+      uses: coverallsapp/github-action@v2
+      with:
+        flag-name: integration
