Move to conventional source & build sphinx configuration
* use sphinx provided Makefile; call it via tox

--- a/tox.ini
+++ b/tox.ini
@@ -71,12 +71,11 @@ commands =
 	ruff format neurodamus
 
 [testenv:docs]
-changedir = {toxinidir}
+changedir = docs
 deps =
-    sphinx<5.1.0
+    sphinx
     sphinx-bluebrain-theme
-setenv =
-    PYTHONPATH = {toxinidir}
-    PIP_INDEX_URL = https://bbpteam.epfl.ch/repository/devpi/simple
 commands =
-    sphinx-build -T -W docs docs/_build
+    make clean
+    make html SPHINXOPTS=-W  # make warnings into errors with -W sphinx option
+allowlist_externals = make
