--- a/tox.ini
+++ b/tox.ini
@@ -71,4 +71,5 @@ deps =
 setenv =
     PYTHONPATH = {toxinidir}
 commands =
+    # Build the Sphinx documentation
     sphinx-build -T -W docs docs/_build
