--- a/tox.ini
+++ b/tox.ini
@@ -13,13 +13,7 @@ deps =
     {[testenv]deps}
     pytest-cov
 commands =
-    pytest --cov=neurodamus --cov-report=term-missing
-
-[testenv:test]
-deps = 
-    {[testenv]deps}
-commands =
-    pytest {posargs}
+    pytest --cov=neurodamus --cov-report=term-missing tests/unit
 
 [testenv:integration]
 deps =
