Improvements on the Dockerfile (#20)
## Scope
1. Use the bash command `uname -m` to detect the build architecture when
needed instead of the Global ARG variable.
2. Copy those common bluebrain hoc and mod files from neurodamus-models
to $NEURODAMUS_MODS_DIR which are required for instantiating neurodamus.
3. Add a note in README about the architecture
 
## Testing
Locally tested with apply M1 as well as Ubuntu linux.

## Review
* [x] PR description is complete
* [x] Coding style (imports, function length, New functions, classes or
files) are good
* [ ] Unit/Scientific test added
* [x] Updated Readme, in-code, developer documentation

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,12 +1,4 @@
-ARG TARGETARCH
-
-FROM ubuntu:22.04 AS linux_amd64
-ARG ARCH=x86_64
-
-FROM ubuntu:22.04 AS linux_arm64
-ARG ARCH=aarch64
-
-FROM linux_$TARGETARCH
+FROM ubuntu:22.04
 LABEL org.opencontainers.image.authors="Weina Ji <weina.ji@openbraininstitute.org>"
 
 # The default shell for the RUN instruction is ["/bin/sh", "-c"].
@@ -21,8 +13,6 @@ ARG WORKDIR=/opt/software
 ARG INSTALL_DIR=/opt/software/install
 ARG USR_VENV=$WORKDIR/venv
 
-RUN echo "The targeting architecture is $ARCH"
-
 # Install needed libs
 RUN apt-get --yes -qq update \
  && apt-get --yes -qq upgrade \
@@ -35,6 +25,7 @@ RUN apt-get --yes -qq update \
                       git \
                       cmake \
                       wget \
+                      vim \
                       mpich libmpich-dev libhdf5-mpich-dev hdf5-tools \
                       flex libfl-dev bison ninja-build libreadline-dev \
  && apt-get --yes -qq clean \
@@ -47,12 +38,12 @@ RUN apt-get --yes -qq update \
 
 # Install libsonata
 RUN source $USR_VENV/bin/activate \
- &&CC=mpicc CXX=mpic++ pip install git+https://github.com/BlueBrain/libsonata@$LIBSONATA_TAG
+ &&CC=mpicc CXX=mpic++ pip install git+https://github.com/openbraininstitute/libsonata@$LIBSONATA_TAG
 
 # Install libsonatareport
 RUN mkdir -p $WORKDIR \
  && cd $WORKDIR \
- && git clone https://github.com/BlueBrain/libsonatareport.git --recursive --depth 1 -b $LIBSONATAREPORT_TAG \
+ && git clone https://github.com/openbraininstitute/libsonatareport.git --recursive --depth 1 -b $LIBSONATAREPORT_TAG \
  && cmake -B rep_build -S libsonatareport -DCMAKE_INSTALL_PREFIX=$INSTALL_DIR -DCMAKE_BUILD_TYPE=Release -DSONATA_REPORT_ENABLE_SUBMODULES=ON -DSONATA_REPORT_ENABLE_MPI=ON .. \
  && cmake --build rep_build --parallel \
  && cmake --install rep_build \
@@ -78,13 +69,13 @@ RUN source $USR_VENV/bin/activate \
 # Build h5py with the local hdf5
 RUN source $USR_VENV/bin/activate \
  && pip install mpi4py \
- && CC="mpicc" HDF5_MPI="ON" HDF5_INCLUDEDIR=/usr/include/hdf5/mpich HDF5_LIBDIR=/usr/lib/$ARCH-linux-gnu/hdf5/mpich \
+ && ARCH=$(uname -m) CC="mpicc" HDF5_MPI="ON" HDF5_INCLUDEDIR=/usr/include/hdf5/mpich HDF5_LIBDIR=/usr/lib/$ARCH-linux-gnu/hdf5/mpich \
     pip install --no-cache-dir --no-binary=h5py h5py --no-build-isolation
 
 # Install neurodamus and prepare HOC_LIBRARY_PATH
 RUN source $USR_VENV/bin/activate \
  && cd $WORKDIR \
- && git clone https://github.com/BlueBrain/neurodamus.git \
+ && git clone https://github.com/openbraininstitute/neurodamus.git \
  && cd neurodamus \
  && pip install .
 
@@ -94,11 +85,19 @@ ENV NEURODAMUS_MODS_DIR="$WORKDIR/neurodamus/neurodamus/data/mod"
 ENV PATH="$INSTALL_DIR/bin:$USR_VENV/bin:$PATH"
 ENV PYTHONPATH="$INSTALL_DIR/lib/python:$PYTHONPATH"
 
-# Copy and edit module building script and test build
+# Copy common bluebrain hoc and mod files from neurodamus-models, required for instantiating neurodamus
+RUN wget -q https://raw.githubusercontent.com/openbraininstitute/neurodamus-models/refs/heads/main/common/hoc/AMPANMDAHelper.hoc -O $HOC_LIBRARY_PATH/AMPANMDAHelper.hoc \
+ && wget -q https://raw.githubusercontent.com/openbraininstitute/neurodamus-models/refs/heads/main/common/hoc/GABAABHelper.hoc -O $HOC_LIBRARY_PATH/GABAABHelper.hoc \
+ && wget -q https://raw.githubusercontent.com/openbraininstitute/neurodamus-models/refs/heads/main/common/mod/ProbAMPANMDA_EMS.mod -O $NEURODAMUS_MODS_DIR/ProbAMPANMDA_EMS.mod \
+ && wget -q https://raw.githubusercontent.com/openbraininstitute/neurodamus-models/refs/heads/main/common/mod/ProbGABAAB_EMS.mod -O $NEURODAMUS_MODS_DIR/ProbGABAAB_EMS.mod
+
+# Edit module building script and test build
 ADD build_neurodamus.sh $INSTALL_DIR/bin
-RUN sed -i "s/ARCH=\"x86_64\"/ARCH=\"$ARCH\"/g" $INSTALL_DIR/bin/build_neurodamus.sh \
+RUN ARCH=$(uname -m) \
+ && sed -i "s/ARCH=\"x86_64\"/ARCH=\"$ARCH\"/g" $INSTALL_DIR/bin/build_neurodamus.sh \
  && build_neurodamus.sh $NEURODAMUS_MODS_DIR \
- && ./$ARCH/special -python -c "from neuron import h; from neurodamus import Neurodamus; h.quit()" \
+ && ./$ARCH/special -python -c "from neuron import h; h.quit()" \
+ && ./$ARCH/special -python -c "from neurodamus.core import NeurodamusCore as Nd; Nd.init()" \
  && rm -rf $ARCH/
 
 ENTRYPOINT ["bash"]
