--- a/tox.ini
+++ b/tox.ini
@@ -72,9 +72,7 @@ commands =
 
 [testenv:docs]
 changedir = docs
-deps =
-    sphinx
-    sphinx-bluebrain-theme
+extras = docs
 commands =
     make clean
     make html SPHINXOPTS=-W  # make warnings into errors with -W sphinx option
