--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,7 +6,7 @@
 version: 2
 
 sphinx:
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
   fail_on_warning: true
 
 build:
@@ -18,4 +18,5 @@ python:
   install:
     - method: pip
       path: .
-    - requirements: requirements_docs.txt
+      extra_requirements:
+        - docs
