--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -23,6 +23,7 @@ on:
       NEURODAMUS_MODELS_BRANCH:
         description: 'neurodamus-models branch to use'
         required: false
+        default: 'katta/conn_conf_remove'
 
 env:
   NEURON_COMMIT_ID: 'c48d7d5'
