--- a/tox.ini
+++ b/tox.ini
@@ -71,11 +71,9 @@ commands =
 	ruff format neurodamus
 
 [testenv:docs]
-changedir = {toxinidir}
-deps =
-    sphinx<5.1.0
-    sphinx-bluebrain-theme
-setenv =
-    PYTHONPATH = {toxinidir}
+changedir = docs
+extras = docs
 commands =
-    sphinx-build -T -W docs docs/_build
+    make clean
+    make html SPHINXOPTS=-W  # make warnings into errors with -W sphinx option
+allowlist_externals = make
