--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,10 +3,10 @@ name: Build coverage reports
 on:
   pull_request:
     branches:
-      - '**'
   push:
     branches:
-      - main
+      - master
+      - '**' 
 
 jobs:
   coverage:
