Changed branches affected by GH actions
As discribed in issue #39
-coverage.yml was changed to affect branch main insted of master
-simulation_text.yml was changed to affect all branches not just main

--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -4,11 +4,9 @@ on:
     # every evening at 20:00 UTC
     - cron: '0 20 * * *'
   pull_request:
-    branches:
-      - main
+    branches: ["**"]
   push:
-    branches:
-      - main
+    branches: ["**"]
   workflow_dispatch:
     inputs:
       NEURON_BRANCH:
