--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -79,8 +79,9 @@ jobs:
 
     - name: Install system dependencies
       run: |
+        source ./ci/build-dependencies.sh
         sudo apt-get update
-        sudo apt-get install -y mpich libmpich-dev libhdf5-mpich-dev hdf5-tools flex libfl-dev bison ninja-build
+        sudo bash -c "$(declare -f install-apt-dependencies); install-apt-dependencies"
 
     - name: Cache python virtual env
       id: cache-venv
@@ -97,7 +98,7 @@ jobs:
         python -m venv venv
         . ./venv/bin/activate
         python -m pip install --upgrade pip setuptools
-        pip install cython numpy wheel pkgconfig
+        pip install cython numpy wheel pkgconfig mpi4py
 
     - name: Add virtual environment to PATH
       run: echo "${{ github.workspace }}/venv/bin" >> $GITHUB_PATH
@@ -105,7 +106,8 @@ jobs:
     - name: Install libsonata
       if: steps.cache-venv.outputs.cache-hit != 'true'
       run: |
-        CC=mpicc CXX=mpic++ pip install git+https://github.com/openbraininstitute/libsonata@${{ env.LIBSONATA_BRANCH }}
+        source ./ci/build-dependencies.sh
+        build-libsonata "${{ env.LIBSONATA_BRANCH }}"
 
     - name: Cache libsonatareport
       id: cache-libsonatareport
@@ -119,12 +121,8 @@ jobs:
     - name: Install libsonatareport
       if: steps.cache-libsonatareport.outputs.cache-hit != 'true'
       run: |
-        git clone --branch="${{ env.LIBSONATA_REPORT_BRANCH}}" https://github.com/openbraininstitute/libsonatareport.git --recursive --depth=1
-        cd libsonatareport
-        mkdir build && cd build
-        cmake -DCMAKE_INSTALL_PREFIX=$(pwd)/install -DCMAKE_BUILD_TYPE=Release -DSONATA_REPORT_ENABLE_SUBMODULES=ON -DSONATA_REPORT_ENABLE_MPI=ON ..
-        cmake --build . --parallel
-        cmake --build . --target install
+        source ./ci/build-dependencies.sh
+        build-libsonatareport ${{ env.LIBSONATA_REPORT_BRANCH }}
 
     - name: Cache NEURON
       id: cache-neuron
@@ -138,33 +136,8 @@ jobs:
     - name: Install NEURON
       if: steps.cache-neuron.outputs.cache-hit != 'true'
       run: |
-        export SONATAREPORT_DIR=$(pwd)/libsonatareport/build/install
-        if [[ ${{ env.NEURON_BRANCH }} == 'master' ]]; then
-          git clone --branch=${{ env.NEURON_BRANCH }} https://github.com/neuronsimulator/nrn.git
-          cd nrn
-          git checkout ${{ env.NEURON_COMMIT_ID }}
-          cd ..
-        else
-          git clone --branch=${{ env.NEURON_BRANCH }} https://github.com/neuronsimulator/nrn.git --depth=1
-        fi
-        python -m pip install --upgrade pip -r nrn/nrn_requirements.txt
-        cmake -B nrn/build -S nrn -G Ninja \
-          -DPYTHON_EXECUTABLE=$(which python) \
-          -DCMAKE_INSTALL_PREFIX=$(pwd)/nrn/build/install \
-          -DNRN_ENABLE_MPI=ON \
-          -DNRN_ENABLE_INTERVIEWS=OFF \
-          -DNRN_ENABLE_CORENEURON=ON \
-          -DCMAKE_C_COMPILER=gcc \
-          -DCMAKE_CXX_COMPILER=g++ \
-          -DCORENRN_ENABLE_REPORTING=ON \
-          -DCMAKE_PREFIX_PATH=$SONATAREPORT_DIR
-        cmake --build nrn/build --parallel
-        cmake --build nrn/build --target install
-
-    - name: Install mpi4py
-      if: steps.cache-venv.outputs.cache-hit != 'true'
-      run: |
-        pip install mpi4py
+        source ./ci/build-dependencies.sh
+        build-neuron ${{ env.NEURON_BRANCH }} ${{ env.NEURON_COMMIT_ID }}
 
     - name: Build h5py with the local hdf5
       run: |
@@ -177,22 +150,8 @@ jobs:
 
     - name: Build neocortex models
       run: |
-        export SONATAREPORT_DIR=$(pwd)/libsonatareport/build/install
-        export PATH=$(pwd)/nrn/build/install/bin:$PATH
-        # Clone neurodamus-models repository
-        git clone --branch=${{ env.NEURODAMUS_MODELS_BRANCH }} https://github.com/openbraininstitute/neurodamus-models.git
-        # Build neocortex model
-        DATADIR=$(python -c "import neurodamus; from pathlib import Path; print(Path(neurodamus.__file__).parent / 'data')")
-        cmake -B neurodamus-models/build -S neurodamus-models/ \
-          -DCMAKE_INSTALL_PREFIX=$PWD/neurodamus-models/install \
-          -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=ON \
-          -DCMAKE_PREFIX_PATH=$SONATAREPORT_DIR \
-          -DNEURODAMUS_CORE_DIR=${DATADIR} \
-          -DNEURODAMUS_MECHANISMS=neocortex \
-          -DNEURODAMUS_NCX_V5=ON
-        cmake --build neurodamus-models/build
-        cmake --install neurodamus-models/build
-        echo "NEURODAMUS_NEOCORTEX_ROOT=$(pwd)/neurodamus-models/install" >> $GITHUB_ENV;
+        source ./ci/build-dependencies.sh
+        build-neocortex-models ${{ env.NEURODAMUS_MODELS_BRANCH }} 
 
         # Build neocortex-multiscale model
         echo "build neurodamus-neocortex-multiscale model"
